<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:id="@+id/chronometer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/runtastic_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_value"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textColor="#000000"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@android:color/white"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/runtastic_start_live_running"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/start_live"
                android:background="@drawable/button_shape"
                android:visibility="visible"
                />

            <LinearLayout
                android:id="@+id/runtastic_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone">

                <Button
                    android:id="@+id/runtastic_pause"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    android:background="@drawable/button_shape"
                    android:visibility="visible"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/runtastic_resume"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resume"
                    android:background="@drawable/button_shape"
                    android:visibility="gone"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/runtastic_reset"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:background="@drawable/button_shape"
                    android:layout_marginStart="10dp"
                    android:visibility="visible"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/runtastic_stop"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="5dp"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>



</LinearLayout>